# neo-demo

./: README.md  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: neo-build.yml
.github/workflows/: key-check.yml  neo.yml  wf-test.yml
.neo/: config.yml  install-receipt.md
.neo/evals/cases/: example.yaml  slugify-basic.yaml  truncate-basic.yaml
neo_demo/: __init__.py
tests/: test_demo.py
