[project]
name = "neo-demo"
version = "0.1.0"
description = "Tiny text-utils app used to exercise the neo harness end to end."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neo_demo"]
